--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
       "start": "node ts-g-rei.js"
     },
    "dependencies": {
-      "discord.js": "^13.4.0",
-      "express": "4.17.2"
+      "discord.js": "^14.6.0",
+    "express": "4.17.2",
+    "ffmpeg-static": "4.4.0",
+    "ms": "3.0.0-canary.1",
+    "opusscript": "0.0.8"
     },
     "engines": {
       "node": "18.x"
